新增 binding volume 功能
