# docs/swagger.json
@@ -245,7 +245,14 @@
                     "type": "string",
                     "example": "mileslin/dockerlab:latest"
                 },
+                "mount": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.Mount"
+                    }
+                },
                 "restartPolicy": {
+                    "description": "It supports `no`, `always`, `on-failure`, `unless-stopped`",
                     "type": "string",
                     "example": "always"
                 }
@@ -291,7 +298,14 @@
                     "type": "string",
                     "example": "mileslin/dockerlab:latest"
                 },
+                "mount": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.Mount"
+                    }
+                },
                 "restartPolicy": {
+                    "description": "It supports `no`, `always`, `on-failure`, `unless-stopped`",
                     "type": "string",
                     "example": "always"
                 },
@@ -309,6 +323,24 @@
                 "imageNameTag": {
                     "type": "string",
                     "example": "mileslin/dockerlab:latest"
+                }
+            }
+        },
+        "main.Mount": {
+            "type": "object",
+            "properties": {
+                "source": {
+                    "type": "string",
+                    "example": "myvolume"
+                },
+                "target": {
+                    "type": "string",
+                    "example": "/app/appdata"
+                },
+                "type": {
+                    "description": "It supports `bind`, `volume`, `tmpfs`, `npipe`",
+                    "type": "string",
+                    "example": "volume"
                 }
             }
         }
